// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile w/ websmith should build foobar-arrow.js with ES2020 and addonsDir 1`] = `
"export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;

exports[`compile w/ websmith should build foobar-function.js with ES2020 and addonsDir 1`] = `
"export function getFoobar(date) {
    return foobar(date);
}
function foobar(date) {
    return \`foobar \${date.toISOString()}\`;
}
"
`;

exports[`compile w/ websmith should generate additional files with addonDir and one addon selected 1`] = `
"export const getFoobar = (date) => {
    return foobar(date);
};
const foobar = (date) => {
    return \`foobar \${date.toISOString()}\`;
};
"
`;
